<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ManagementSystem</groupId>
    <artifactId>librarySE</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

<properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- SonarCloud configuration -->
    <sonar.organization>libraryse-project</sonar.organization>
    <sonar.projectKey>LibrarySE-Project_LibraryManagementSystem</sonar.projectKey>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>

    <!-- Exclude GUI package from Sonar analysis + coverage -->
    <sonar.exclusions>src/main/java/librarySE/app/**</sonar.exclusions>
    <sonar.coverage.exclusions>src/main/java/librarySE/app/**</sonar.coverage.exclusions>
</properties>



    <dependencies>

        <!-- Jakarta Mail API -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- Dotenv (load .env configuration) -->
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>java-dotenv</artifactId>
            <version>5.2.2</version>
        </dependency>

        <!-- Gson JSON library -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>

        <!-- JavaFX Core -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>22.0.1</version>
        </dependency>

        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>22.0.1</version>
        </dependency>

        <!-- JUnit 5 (Jupiter) for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito Core (standard mocking) -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito Inline (allows static method mocking such as Transport.send) -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>librarySE.ui.LibraryApp</mainClass>
                </configuration>
            </plugin>
                        <plugin>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.8.11</version>
		
		    <configuration>
		        <excludes>
		            <exclude>librarySE/app/**</exclude>
		        </excludes>
		    </configuration>
		
		    <executions>
		        <execution>
		            <goals>
		                <goal>prepare-agent</goal>
		            </goals>
		        </execution>
		
		        <execution>
		            <id>report</id>
		            <phase>test</phase>
		            <goals>
		                <goal>report</goal>
		            </goals>
		        </execution>
		    </executions>
		</plugin>


        </plugins>
    </build>

</project>
